@@ -206,8 +206,14 @@ public class Groovity implements GroovityConstants{
 	protected Script createScript(final String scriptName) throws InstantiationException, IllegalAccessException{
 		final Class<Script> gsc = getScriptClass(scriptName);
 		if(gsc!=null){
-			Script gs = gsc.newInstance();
-			return gs;
+			try {
+				Script gs = gsc.getDeclaredConstructor().newInstance();
+				return gs;
+			} catch (NoSuchMethodException e) {
+				throw new InstantiationException("No default constructor: " + gsc.getName());
+			} catch (InvocationTargetException e) {
+				throw new InstantiationException("Constructor threw: " + e.getCause());
+			}
 		}
 		return null;
 	}
@@ -335,7 +341,13 @@ public class Groovity implements GroovityConstants{
 							//whose field loading might depend on the arg binding decorator
 							abd.resolve(variables,argsLookup);
 						}
-						script = gsc.newInstance();
+						try {
+						script = gsc.getDeclaredConstructor().newInstance();
+					} catch (NoSuchMethodException e) {
+						throw new InstantiationException("No default constructor: " + gsc.getName());
+					} catch (InvocationTargetException e) {
+						throw new InstantiationException("Constructor threw: " + e.getCause());
+					}
 						if(script!=null){
 							script.setBinding(binding);
 							variables.put(varName, script);
@@ -995,8 +1007,8 @@ public class Groovity implements GroovityConstants{
 			else if (Taggable.class.isAssignableFrom(c)){
 				if(tagLib!=null){
 					try {
-						tagLib.add((Taggable)c.newInstance());
-					} catch (InstantiationException e) {
+						tagLib.add((Taggable)c.getDeclaredConstructor().newInstance());
+					} catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
 						log.log(Level.SEVERE,"Could not register GroovyTag "+c.getName(),e);
 					}
 				}
@@ -1444,6 +1456,7 @@ public class Groovity implements GroovityConstants{
 		compilerConfiguration.addCompilationCustomizers(new ASTTransformationCustomizer(new GroovityASTTransformation(this,sourceLineNumbers,initDependencies)));
 		compilerConfiguration.addCompilationCustomizers(new ASTTransformationCustomizer(new StatsASTTransformation()));
 		Map<String,Boolean> options = compilerConfiguration.getOptimizationOptions();
+		// JDK8 enables invokedynamic and other Java 8+ bytecode optimizations; still valid on 17+
 		options.put(CompilerConfiguration.JDK8, true);
 		compilerConfigurationDecorators.forEach(decorator -> { decorator.decorate(compilerConfiguration); });
 		return compilerConfiguration;
